--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <div class="main-content" id="main-content">
         <img src="https://j.top4top.io/p_3547q2n001.png" alt="Music Logo" class="logo-image" />
         <div class="main-title">MUSIC on your server</div>
-        <div class="subtitle">بعيوني Nitwit</div>
+        <div class="subtitle">كرمال WOW</div>
         <a href="https://discord.gg/muz" class="discord-link" target="_blank" rel="noopener noreferrer">https://discord.gg/muz</a>
     </div>
 
@@ -374,3 +374,4 @@
     </script>
 </body>
 </html>
+
